--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>FlotaServlets</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>ServletHundirLaFlota</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,4 +9,44 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>HundirFlotaServlet</display-name>
+    <servlet-name>HundirFlotaServlet</servlet-name>
+    <servlet-class>controlador.HundirFlotaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HundirFlotaServlet</servlet-name>
+    <url-pattern>/HundirFlotaServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SolucionPartidaServlet</display-name>
+    <servlet-name>SolucionPartidaServlet</servlet-name>
+    <servlet-class>controlador.SolucionPartidaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SolucionPartidaServlet</servlet-name>
+    <url-pattern>/SolucionPartidaServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>NuevaPartidaServlet</display-name>
+    <servlet-name>NuevaPartidaServlet</servlet-name>
+    <servlet-class>controlador.NuevaPartidaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NuevaPartidaServlet</servlet-name>
+    <url-pattern>/NuevaPartidaServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SalirPartidaServlet</display-name>
+    <servlet-name>SalirPartidaServlet</servlet-name>
+    <servlet-class>controlador.SalirPartidaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SalirPartidaServlet</servlet-name>
+    <url-pattern>/SalirPartidaServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
